[workspace]
members = ["ext4"]

[package]
name = "vdi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytemuck = { version = "1.23.2", features = ["derive"] }
positioned-io2 = "0.3.4"
unix_path = "1.0.1"
uuid = { version = "1.18.1", features = ["bytemuck"] }

[dev-dependencies]
bootsector = "0.2.0"
ext4 = { path = "./ext4" }
